# drone-pypi

./: .dockerignore  .drone.jsonnet  .drone.sec  .drone.windows.jsonnet  .drone.windows.yml  .drone.yml  .gitignore  DOCS.md  Dockerfile  Dockerfile.arm  Dockerfile.arm64  Dockerfile.windows  Gopkg.toml  MAINTAINERS  Makefile  README.md  coverage.out  go.mod  go.sum  main.go  main_test.go  manifest.tmpl  plugin-pypi  plugin.go  plugin_test.go
.github/: settings.yml
docker/: Dockerfile.linux.amd64  Dockerfile.linux.arm  Dockerfile.linux.arm64  Dockerfile.windows.1803  Dockerfile.windows.1809  manifest.tmpl
testdata/: README  config.ini  setup.cfg  setup.py
testdata/drone_pypi_test/: __init__.py
