[metadata]
name = drone-pypi-testbuild
version = attr: drone_pypi_test.__version__
description = Testing drone-pypi publishes, no other purpose.
url = https://github.com/xoxys/drone-pypi
packages = find: ['drone_pypi_test']
maintainer = Robert Kaussow
maintainer_email = xoxys@rknet.org

[options.packages.find]
where = .
